# go-web-framework-benchmark

./: .gitignore  .travis.yml  Dockerfile  Makefile  README.md  concurrency-pipeline.csv  concurrency.csv  concurrency_latency.csv  docker-test.sh  glide.yaml  go.mod  go.sum  goyavecfg.json  libs.sh  libs.version  lock.json  manifest.json  pipeline.lua  pow.go  processtime-pipeline.csv  processtime.csv  processtime_alloc.csv  processtime_latency.csv  server.go  test-all.sh  test-latency-nonkeepalive.sh  test-latency.sh  test-pipelining.sh  test.sh
rust/actix/: Cargo.toml
rust/actix/src/: main.rs
rust/minihttp/: Cargo.toml
rust/minihttp/src/: main.rs
testresults/: benchmark_alloc.gnu  benchmark_latency.gnu  benchmark_pipeline.gnu  concurrency-pipeline.csv  concurrency.csv  concurrency.gnu  concurrency_alloc.csv  concurrency_alloc.gnu  concurrency_latency.csv  concurrency_latency.gnu  concurrency_pipeline.gnu  cpubound-concurrency.csv  cpubound.csv  cpubound_benchmark.gnu  cpubound_concurrency.gnu  plot.sh  plot_mac.sh  processtime-pipeline.csv  processtime.csv  processtime_alloc.csv  processtime_latency.csv
