[package]
name = "actix"
version = "0.1.0"
authors = ["smallnest <smallnest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { version="0.9.0", features=["http"] }
actix-web = { version="2.0.0", default-features = false }
actix-http = { version="1.0.1", default-features = false }
actix-rt = "1.0.0"
actix-codec = "0.5.0"
actix-server = "1.0.0"
actix-service = "1.0.1"
# jemallocator = "0.3.2"
# snmalloc-rs = "0.2.3"
bytes = "0.5.3"