[package]
name = "minihttp"
version = "0.1.0"
authors = ["smallnest <smallnest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.12.0"
futures = "0.1.11"
httparse = "1.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-minihttp = { git = "https://github.com/tokio-rs/tokio-minihttp" }
